1999-08-27  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-procbar.c (gnome_proc_bar_construct): New function. 

	* gnome-pixmap-entry.c (gnome_pixmap_entry_construct): New function.

	* gnome-dock-item.c (gnome_dock_item_construct): New function.

	* gnome-file-entry.c (gnome_file_entry_construct): New function,
	per request from Guillaume.

Fri Aug 27 15:41:48 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry-edit.c: use the new gnome-dentry interface for 
	  getting the i18n lists

Fri Aug 27 10:30:10 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry-edit.[ch]: add a way to edit the translations of
	  name and comment on the advanced page

1999-08-26  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas-util.c (gnome_canvas_update_svp): Free the old
	svp.  BUGFIX:  GNOME bug tracker #1991.

1999-08-25  Havoc Pennington  <hp@pobox.com>

	* gnome_segv.c (main): Translate usage string,
	enhance the error message.

	* gnome-init.c (gnome_init_cb): Set flag if we should
	--disable-crash-dialog; install the signal handler 
	based on the flag.
	(gnome_options): Add --disable-crash-dialog option
	(gnome_segv_handle): Give up after 10 segfaults; 
	try to release grabs before popping up the dialog.

1999-08-23  Herbert Valerio Riedel  <hvr@hvrlab.dhs.org>

	* gnome-procbar.[ch] (gnome_proc_bar_set_values): made val[] const

	* gtk-ted.[ch], gnome-spell.[ch], gnome-popup-help.[ch], 
	gnome-pixmap-entry.[ch], gnome-number-entry.[ch], gnome-mdi.[ch],
	gnome-mdi-generic-child.[ch], gnome-mdi-child.[ch], gnome-entry.[ch],
	gnome-icon-text.[ch], gnome-icon-entry.[ch], gnome-druid-page-start.[ch],
	gnome-druid-page-standard.[ch], gnome-druid-page-finish.[ch], 
	gnome-client.[ch]: marked some more char* args const

1999-08-22  Herbert Valerio Riedel  <hvr@hvrlab.dhs.org>

	* gnome-icon-entry.c (gnome_icon_entry_new): added missing GNOME_ENTRY
	* gnome-properties.c: added <string.h>
	* gtkpixmapmenuitem.h, gtkcauldron.h, gtkdial.h, 